# OpsAgent

./: .env.example  .gitignore  LICENSE  README.md  agents.py  pyproject.toml  requirements.txt
agent/: graph.py  state.py
agent/nodes/: anomaly_caller.py  diagnosis.py  intent_parser.py  knowledge_caller.py
agent/prompts/: templates.py
api/: main.py
docs/: DESIGN.md
eval/: eval_anomaly.py  eval_e2e.py  eval_retrieval.py
mcp_client/: client.py  client.py.bk  pyproject.toml
mcp_servers/: delete_file.py  prompt_and_resources.py
mcp_servers/anomaly_detection/: server.py
mcp_servers/anomaly_detection/detectors/: isolation_forest.py  statistical.py
mcp_servers/ops_knowledge_rag/: indexer.py  reranker.py  retriever.py  server.py
scripts/: build_index.py  download_data.py  start_all.py
web/: index.html
